fix: weird css when overflow was visible

--- a/frontend/src/components/Header.module.css
+++ b/frontend/src/components/Header.module.css
@@ -1,6 +1,6 @@
 .header {
     background-color: var(--background);
-    width: 100vw;
+    width: 100%;
     height: 70px;
 }
 
